[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "greenbutton_objects"
version = "2024.6.25"
description = "Parse Green Button XML files into Python objects."
readme = "README.md"
authors = [{ name = "Phil Gold", email = "phil_g@pobox.com" },
           { name = "Adam Finkle", email = "77808710+AdamFinkle@users.noreply.github.com" },
           { name = "Ethan Strominger", email = "ethanstrominger2@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["feed", "reader", "tutorial"]
requires-python = ">=2.7"

[project.optional-dependencies]
dev = [
    "black",
    "bumpver",
    "isort",
    "mypy",
    "pip-tools",
    "pydocstyle",
    "pytest"
]

[project.urls]
Homepage = "https://github.com/AdamFinkle/greenbutton_objects"
[tool.bumpver]
current_version = "2024.6.21"
version_pattern = "YYYY.MM.DD"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"README.md" = [
    "{version}",
    "{pep440_version}",
]